--- a/avs/demo/index.html
+++ b/avs/demo/index.html
@@ -6,6 +6,10 @@
         <title>Air Vrtual System</title>
     </head>
     <body>
+        <div id="demo">
+            
+        </div>
         <script src="system/js/command.js"></script>
+        <script src="system/js/system.js"></script>
     </body>
 </html>
