--- a/avs/demo/index.html
+++ b/avs/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" charsetting="utf-8" />
-        <link rel="system/style.css" type="text/css" href="system/css/style.css">
+        <link rel="stylesheet" type="text/css" href="system/css/style.css">
         <title>Air Vrtual System</title>
     </head>
     <body>
