--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
         </div>
         <div id="body">
             <span class="text_title">pvp</span><br>
-            想要和小伙伴一决高下吗?<br>
-            可是市场上的对战游戏太囊肿了<br>
-            没关系<br>
-            pvp是您最好的选择<br>
+            能欺负你好朋友的好游戏<br>
             <a href="pvp/index.html">点击直接运行</a>
             <br>
             <span class="text_title">air虚拟系统</span><br>
