--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             <div class="title"><img src="logo.png" class="logo">Air Studio</div>
         </div>
         <div id="body">
+            <span class="text_title">market</span><br>
+            一个小游戏<br>
+            <a href="pvp/index.html">点击直接运行</a>
+            <br>
             <span class="text_title">pvp</span><br>
             能欺负你好朋友的好游戏<br>
             <a href="pvp/index.html">点击直接运行</a>
