--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="body">
             <span class="text_title">market</span><br>
             一个小游戏<br>
-            <a href="pvp/index.html">点击直接运行</a>
+            <a href="market/index.html">点击直接运行</a>
             <br>
             <span class="text_title">pvp</span><br>
             能欺负你好朋友的好游戏<br>
