--- a/market/index.html
+++ b/market/index.html
@@ -44,7 +44,7 @@
     }
     function list(object){
         if(object == "money")document.getElementById("demo").innerHTML += "<p style='color:white'>you money " + info.money + "</p>";
-        else document.getElementById("demo").innerHTML += "<p style='color:white'>now item " + object + " money " + info.item[object].money + ",目前持有" + info.item[object].value + "个</p>";
+        else document.getElementById("demo").innerHTML += "<p style='color:white'>now item no." + object + " money " + info.item[object].money + "," + info.item[object].value + "个</p>";
     }
     //v1.0
 </script>
