--- a/avs/index.html
+++ b/avs/index.html
@@ -1,24 +1,12 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8" charsetting="utf-8">
-<title>air虚拟系统</title>
-</head>
-<body>
-<div id="log">
-    欢迎使用air虚拟系统<br/>
-    air工作室 版权所有<br/>
-    help帮助
-</div>
-<input type="text" id="command" value="" autofocus />
-<script src="js/log.js"></script>
-<script src="js/help.js"></script>
-<script src="js/edit.js"></script>
-<script src="js/rename.js"></script>
-<script src="js/time.js"></script>
-<script src="js/del.js"></script>
-<script src="js/event.js"></script>
-<script src="js/info.js"></script>
-<script src="js/start.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div id="demo"></div>
+        <script src="js/command.js"></script>
+        <script src="js/system/language.js"></script>
+        <script src="js/system/onload.js"></script>
+    </body>
 </html>
