--- a/pvp/index.html
+++ b/pvp/index.html
@@ -17,7 +17,9 @@
             <br>
             蓝<progress value="20" max="20" id="blueHP"></progress><span id="bluewin_value">0</span>场胜利
             <img src="img/red_skills1.png" id="red_skills1" class="skills">
+            <img src="img/red_skills2.png" id="red_skills2" class="skills">
             <img src="img/blue_skills1.png" id="blue_skills1" class="skills">
+            <img src="img/blue_skills2.png" id="blue_skills2" class="skills">
         </div>
         <script src="js/walk.js"></script>
         <script src="js/pvp.js"></script>
