--- a/pvp/ui.html
+++ b/pvp/ui.html
@@ -4,15 +4,39 @@
         <meta charset="utf-8">
         <title>对战游戏</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/home_page.css">
     </head>
     <body>
         <div id="demo">
+            <div class="title">pvp-game</div>
             <button id="style_entry" onclick="style_window(true)">形象</button>
+            <button id="play_game" onclick="play_game()">开始游戏</button>
             <div id="style_window">
-                <a><img src="img/close.png" class="close"></a>
+                <a onclick="style_window(false)"><img src="img/close.png" class="close"></a>
+            </div>
+            <div id="game">
+                <div class="box">
+                    <img id="red" class="block" src="img/red.png">
+                    <img id="blue" class="block" src="img/blue.png">
+                    <img id="red_" class="block" src="img/player_.png">
+                    <img id="blue_" class="block" src="img/player_.png">
+                </div>
+                <div class="box">
+                    红<progress value="20" max="20" id="redHP"></progress><span id="redwin_value">0</span>场胜利
+                    <br>
+                    蓝<progress value="20" max="20" id="blueHP"></progress><span id="bluewin_value">0</span>场胜利
+                    <img src="img/red_skills1.png" id="red_skills1" class="skills">
+                    <img src="img/red_skills2.png" id="red_skills2" class="skills">
+                    <img src="img/blue_skills1.png" id="blue_skills1" class="skills">
+                    <img src="img/blue_skills2.png" id="blue_skills2" class="skills">
+                </div>
+                <script src="js/walk.js"></script>
+                <script src="js/pvp.js"></script>
+                <script src="js/skills.js"></script>   
+                <script src="js/style.js"></script>   
+                <script src="js/play_game.js"></script> 
             </div>
         </div>
-        <script src="js/style.js"></script>
     </body>
 </html>
