--- a/AirVrtualSystemPro/index.html
+++ b/AirVrtualSystemPro/index.html
@@ -14,6 +14,7 @@
         </div>
         <div id="news"></div>
         <script src="js/info.js"></script>
+        <script src="js/api.js"></script>
         <script src="js/getInfo.js"></script>
         <script src="js/opening.js"></script>
     </body>
