--- a/AirVrtualSystemPro/index.html
+++ b/AirVrtualSystemPro/index.html
@@ -15,7 +15,9 @@
         <div id="news"></div>
         <script src="js/info.js"></script>
         <script src="js/api.js"></script>
-        <script src="js/getInfo.js"></script>
         <script src="js/opening.js"></script>
+        <script src="js/getInfo.js"></script>
+        <script src="js/clock.js"></script>
+        <script src="js/close.js"></script>
     </body>
 </html>
