--- a/air-studio/user-login/index.html
+++ b/air-studio/user-login/index.html
@@ -14,4 +14,44 @@
 <script src=https://pig-cmd.github.io/bmobSDK.js></script>
 <script>
   Bmob.initialize("88ae889891d99fe7", "000427");
+  function user_login(){
+    
+  };
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  	function setcookie(name,value,time)
+	{
+        var exp = new Date();  
+        exp.setTime(exp.getTime() + time);  
+        document.cookie = name + "=" + escape(value) + ";expires=" + exp.toGMTString() + ";path=/";  
+	}
+	function getcookie(name) {  
+        var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");  
+        if (arr = document.cookie.match(reg))  
+	{
+            return unescape(arr[2]);  
+	}
+        else 
+	{
+            return null;  
+	}
+    } 
+	 function delcookie(name,time) {  
+        var exp = new Date();  
+        exp.setTime(exp.getTime() - time);  
+        var cval = getcookie(name);  
+        if (cval != null) 
+            document.cookie = name + "=" + cval + ";expires=" + exp.toGMTString() + ";path=/";
+	}
 </script>
